# python-project-lvl2

./: Makefile  README.md  Untitled.ipynb  file_one.json  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: gendiff.py
gendiff/scripts/: generate_diff.py
scripts/: gendiff.py
tests/: generate_diff_test.py
