[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["maddclif <maddclif24@gmail.com>"]
packages = [
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"

[tool.poetry.scripts]
gendiff = "scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
